lustre/tests/recovery-small.sh
@@ -1761,6 +1761,18 @@ test_110f () {
 }
 run_test 110f "remove remote directory: drop slave rep"
 
+# LU-2844 mdt prepare fail should not cause umount oops
+test_111 () {
+	local mdsdev=$(mdsdevname ${SINGLEMDS//mds/})
+#define OBD_FAIL_MDS_CHANGELOG_INIT 0x151
+	do_facet $SINGLEMDS lctl set_param fail_loc=0x151
+	stop $SINGLEMDS || error "stop MDS failed"
+	start $SINGLEMDS $mdsdev && error "start MDS should fail"
+	do_facet $SINGLEMDS lctl set_param fail_loc=0
+	start $SINGLEMDS $mdsdev || error "start MDS failed"
+}
+run_test 111 "mdd setup fail should not cause umount oops"
+
 complete $SECONDS
 check_and_cleanup_lustre
 exit_status
